[package]
name = "reth-rkb"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "RKB (Rauh-Konsens Begriff) - Celestia-native PoA EVM sequencer extensions for Reth"

[lints]
workspace = true

[dependencies]
# Alloy
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

# Revm
revm.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
